# cascade

./: .gitignore  README.md  ROADMAP.md  flake.nix  pyproject.toml
.github/workflows/: test.yml
src/cascade/: __init__.py
src/cascade/cmd/: __init__.py  handler.py  parser.py  repl.py  types.py
src/cascade/compiler/: __init__.py  ast.py  processed_ast.py
src/cascade/optimizer/: __init__.py  helpers.py  models.py
src/cascade/optimizer/piecewise_functions/: piecewise_linear_function.py
tests/compiler/: test_deps.py
tests/optimizer/: test_scheduling.py
